--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   <body>
     <form action="/" method="post">
     <p>Select Your City:</p>
-    <input type="radio" id="London" name="" value="London">
+    <input type="radio" id="London" name="city" value="London">
     <label for="London">London</label><br>
-    <input type="radio" id="Paris" name="" value="Paris">
+    <input type="radio" id="Paris" name="city" value="Paris">
     <label for="Paris">Paris</label><br>
-    <input type="radio" id="New York" name="" value="New York">
+    <input type="radio" id="New York" name="city" value="New York">
     <label for="New York">New York</label>
     <br>
     <input type="submit" value="Submit">
